added privacy-policy and terms-of-service

--- a/frontend/public/privacy-policy.html
+++ b/frontend/public/privacy-policy.html
@@ -66,7 +66,7 @@
 
     <h2>9. Contact Us</h2>
     <p>If you have any questions about this Privacy Policy, please contact us at:</p>
-    <p>Email: [Your Email Address]<br>
+    <p>Email: sgallage0000@gmail.com<br>
     GitHub: <a href="https://github.com/sigallage/MailPurge">https://github.com/sigallage/MailPurge</a></p>
 </body>
 </html>
