--- a/frontend/public/terms-of-service.html
+++ b/frontend/public/terms-of-service.html
@@ -52,7 +52,7 @@
 
     <h2>11. Contact Information</h2>
     <p>For questions about these Terms of Service, please contact us at:</p>
-    <p>Email: [Your Email Address]<br>
+    <p>Email: sgallage0000@gmail.com<br>
     GitHub: <a href="https://github.com/sigallage/MailPurge">https://github.com/sigallage/MailPurge</a></p>
 </body>
 </html>
